# intelligence-bot

./: .gitignore  App.config  Bot.cs  Command.cs  ConfigKeyword.cs  DiscordUtil.cs  EmojiUnicode.cs  Emote.cs  Event.cs  EventHandler.cs  GameDatabase.cs  Generator.cs  IO.cs  LocalCommandParser.cs  LocalCommandReader.cs  Program.cs  README.md  RemoteCommandParser.cs  RemoteCommands.cs  packages.config  pyproject.toml
Properties/: AssemblyInfo.cs
core/: generate_config.py  main.py  terminal_input.py
webui/: dashboard.py  server.py  static.py
