[tool.poetry]
name = "intelligence-bot"
version = "0.5.0"
description = "Personal discord assistant bot"
authors = ["Pedro Valente <pedro.amaral.valente@gmail.com>"]

[tool.poetry.scripts]
intelligence = "core.main:main"
default_config = "core.generate_config:main"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.2"
flask = "^2.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.core.masonry.api"
