[tool.poetry]
name = "intelligence-bot"
version = "0.5.0"
description = "Personal discord assistant bot."
readme = "README.md"
authors = ["Pedro Valente <pedro.amaral.valente@gmail.com>"]
repository = 'https://github.com/StrengthDev/intelligence-bot'
license = "Apache-2.0"
keywords = ["discord", "bot"]

packages = [
    { include = "core" },
    { include = "webui" },
]

[tool.poetry.scripts]
intelligence = "core.main:main"
default_config = "core.generate_config:main"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.2"
flask = "^2.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
